--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,9 @@ share/python-wheels/
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# Data and model files
+# Data and model files  
 pose_cache/*.caffemodel
+!pose_cache/*.prototxt
 exploration_outputs/
 *.pkl
 *.h5
